student info big update

--- a/cspcapp/static/css/student_detail_view.css
+++ b/cspcapp/static/css/student_detail_view.css
@@ -160,3 +160,13 @@
 input[type="text"]:disabled {
   color: white;
 }
+
+.left-element {
+    display: inline-block;
+    float: left;
+}
+
+.right-element {
+    display: inline-block;
+    float: left;
+}
