--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,9 @@
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
     <link href="{% static 'css/students_overview.css' %}" rel="stylesheet">
     <link href="{% static 'css/student_detail_view.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+          crossorigin="anonymous">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="{% static 'javascript/student_detail_view.js' %}" type="text/javascript"></script>
 </head>
@@ -21,7 +24,10 @@
 <body>
 <div class="sidebar">
     <div class="login-info">
-        <span class="glyphicon glyphicon-user"></span>
+        <div class="circle"></div>
+        <div>
+            <span class="fas fa-door-open"></span>
+        </div>
     </div>
     <div class="sidebar-element">
         <a href="#"><span class="glyphicon glyphicon-option-horizontal"></span></a>
