--- a/cspcapp/static/css/base.css
+++ b/cspcapp/static/css/base.css
@@ -11,11 +11,12 @@ body {
     background: red;
 }
 
+
 .sidebar {
     height: 100%;
     width: 60px;
     position: fixed;
-    z-index: 1;
+    z-index: 5;
     top: 0;
     left: 0;
     background-color: #3b5998;
@@ -23,23 +24,11 @@ body {
     padding-top: 20px;
 }
 
-/* The navigation menu links */
-.sidebar a {
-    padding-left: 6%;
-    text-decoration: none;
-    font-size: 30px;
-    color: whitesmoke;
-    display: block;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidebar a:hover {
-  color: #f1f1f1;
-}
 
 .window-content {
-  margin-left: 60px; /* Same as the width of the sidebar */
-  padding: 0px 10px;
+    margin-left: 60px; /* Same as the width of the sidebar */
+    padding: 0px 10px;
+    z-index: 6;
 }
 
 .login-info {
@@ -66,13 +55,68 @@ body {
     display: block;
 }
 
-.sidebar-element {
-    margin-top: 10px;
-    padding: 6px 10px 8px;
+/* ---------------------------------------------------------
+ Style The Dropdown Button */
+
+/* The navigation menu links */
+.sidebar a {
+    padding-left: 20%;
+    margin-top: 25%;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 30px;
     color: whitesmoke;
     display: block;
-    /*background-color: black;*/
+    z-index: 5;
+
 }
 
+/* When you mouse over the navigation links, change their color */
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
