--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,10 @@
           crossorigin="anonymous">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="{% static 'javascript/student_detail_view.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/constants.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/CourseElementWithDaysInfo.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/PersonDocument.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/PersonHomeAddress.js' %}" type="text/javascript"></script>
 </head>
 
 <body>
