--- a/templates/student_detail_view.html
+++ b/templates/student_detail_view.html
@@ -44,18 +44,19 @@
         {{ person.person_surname_txt }} {{ person.person_name_txt }} {{ person.person_father_name_txt }} ID: {{ person.pk }}
     </h2>
 
-    <div style="display: inline-block; float: left;" >
-    <font color="white">
-                <table class="table main-table" id="first-table" style="width: 350px; background: #3b5998;" border="2">
-                <tr>
-                    <td> Фамилия </td>
-                    <td> Имя </td>
-                    <td> Отчество </td>
-                    <td> Дата рождения </td>
-                    <td> Дата начала учебы </td>
-                    <td> Школа </td>
-                    <td> Литер класса </td>
-                </tr><tr>
+    <div style="display: inline-block; width: 100%" >
+                <table class="table main-table" id="first-table" style="height: 150px; width: 100%" border="2">
+                    <tr style="background: #3b5998; color: #f1f1f1">
+                        <td> Фамилия </td>
+                        <td> Имя </td>
+                        <td> Отчество </td>
+                        <td> Дата рождения </td>
+                        <td> Дата начала учебы </td>
+                        <td> Школа </td>
+                        <td> Литер класса </td>
+                        <td></td>
+                    </tr>
+                    <tr style="background: #f1f1f1;">
                         <td> {{ person.person_surname_txt }} </td>
                         <td> {{ person.person_name_txt }} </td>
                         <td> {{ person.person_father_name_txt }} </td>
@@ -63,15 +64,13 @@
                         <td> {{ student_person.education_start_year }} </td>
                         <td> {{ student_person.school_name_txt }} </td>
                         <td> {{ student_person.liter }} </td>
-                </tr>
+                        <td>
+                            <button style="background-color: #3b5998; width: 100%; height: 100%"  onclick="demo();">
+                            <span class="glyphicon glyphicon-pencil"/>
+                            </button>
+                        </td>
+                    </tr>
                 </table>
-    </font>
-    </div>
-
-    <div style="padding-top: 10px; margin-left: 40%;">
-                    <button style="background-color: #3b5998; height: 155px "  onclick="demo();">
-                        <span class="glyphicon glyphicon-pencil"/>
-                    </button>
     </div>
     <div style="margin-top: 3%">
         <h3 style="color: black; width: 100%">Договоры</h3>
