--- a/templates/base.html
+++ b/templates/base.html
@@ -50,14 +50,14 @@
     <div class="sidebar-element">
         <a href="#"><span class="glyphicon glyphicon-folder-open"></span></a>
     </div>
-    <!--<div class="dropdown">
+    <div class="dropdown">
       <button class="dropbtn">Dropdown</button>
       <div class="dropdown-content">
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
       </div>
-    </div>-->
+    </div>
 
 </div>
 
