--- a/cspcapp/static/css/base.css
+++ b/cspcapp/static/css/base.css
@@ -82,6 +82,7 @@ body {
   font-size: 16px;
   border: none;
   cursor: pointer;
+    z-index: 100;
 }
 
 /* The container <div> - needed to position the dropdown content */
