--- a/cspcapp/static/css/base.css
+++ b/cspcapp/static/css/base.css
@@ -16,7 +16,7 @@ body {
     height: 100%;
     width: 60px;
     position: fixed;
-    z-index: 1;
+    z-index: 5;
     top: 0;
     left: 0;
     background-color: #3b5998;
@@ -24,12 +24,16 @@ body {
     padding-top: 20px;
 }
 
+.sidebar-element:hover,
+.exit-button:hover{
+    background: #8b9dc3;
+}
+
 
 .window-content {
-    position: relative;
     margin-left: 60px; /* Same as the width of the sidebar */
     padding: 0px 10px;
-    z-index: 1  ;
+    z-index: 6;
 }
 
 .login-info {
@@ -60,12 +64,11 @@ body {
     display: block;
 }
 
-
 /* The navigation menu links */
 .sidebar a {
-    padding-left: 20%;
-    margin-top: 25%;
-    padding-top: 10%;
+    padding-left: 12px;
+    padding-top: 5px;
+    margin-top: 20px;
     text-decoration: none;
     font-size: 30px;
     color: whitesmoke;
@@ -74,7 +77,4 @@ body {
 
 }
 
-/* When you mouse over the navigation links, change their color */
-.sidebar a:hover {
-    background: #8b9dc3;
-}
+
