added version table + fixed table on the student_detail_view

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,11 @@
     <div class="sidebar-element">
         <a href="/teachers/"><span class="glyphicon glyphicon-briefcase"></span></a>
     </div>
+
+    <div class="sidebar-element">
+        <a href="/versions/"><span class="glyphicon glyphicon-book"></span></a>
+    </div>
+
     <div class="sidebar-element">
         <a href="#"><span class="glyphicon glyphicon-folder-open"></span></a>
     </div>
