--- a/templates/student_detail_view.html
+++ b/templates/student_detail_view.html
@@ -45,7 +45,7 @@
     </h2>
 
     <div style="display: inline-block; width: 100%" >
-                <table class="table main-table" id="first-table" style="height: 150px; width: 100%" border="2">
+                <table class="table main-table" id="first-table" style="height: 100px; width: 100%">
                     <tr style="background: #3b5998; color: #f1f1f1">
                         <td> Фамилия </td>
                         <td> Имя </td>
