added version table + fixed table on the student_detail_view

--- a/cspcapp/static/css/base.css
+++ b/cspcapp/static/css/base.css
@@ -78,3 +78,14 @@ body {
 }
 
 
+.hidden_panel {
+    display: none;
+    font-size: 20px;
+    color: white;
+    padding-left: 10px;
+}
+
+
+.for_menu_location {
+    float: none;
+}
