--- a/templates/contracts_versions.html
+++ b/templates/contracts_versions.html
@@ -8,10 +8,10 @@
 
 
 {% block content %}
-    <h1 align="center">Изменения в договорах</h1>
+    <h1 align="center">Изменения в договоре</h1>
 
     <div style="margin-top: 80px; margin-bottom: 60px">
-        <h2 style="color: darkblue; margin-bottom: 30px">Номера телефонов</h2>
+        <h2 style="color: darkblue; margin-bottom: 30px">Общие сведения</h2>
 
         <table class="table main-table" style="width: 100%; text-align: left;">
             <colgroup>
@@ -26,7 +26,7 @@
                 <tr>
                     <td>Мобильный номер потребителя</td>
                     <td>Мобильный номер платильщика</td>
-                    <td>INN номер</td>
+                    <td>ИНН</td>
                     <td>Элемент курса</td>
                     <td>Логин пользователя</td>
                     <td>Время изменения</td>
