--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,15 @@
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
           crossorigin="anonymous">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="{% static 'javascript/student_detail_view.js' %}" type="text/javascript"></script>
-    <script src="{% static 'javascript/constants.js' %}" type="text/javascript"></script>
-    <script src="{% static 'javascript/CourseElementWithDaysInfo.js' %}" type="text/javascript"></script>
-    <script src="{% static 'javascript/PersonDocument.js' %}" type="text/javascript"></script>
-    <script src="{% static 'javascript/PersonHomeAddress.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/commonFiles/constants.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/commonFiles/objectsEditing.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/commonFiles/addObject.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/commonFiles/deleteObject.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/commonFiles/animations.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/commonFiles/templates.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/commonFiles/common.js' %}" type="text/javascript"></script>
+    {% block scriptconnect %}
+    {% endblock %}
 </head>
 
 <body>
