--- a/templates/teachers_info_view.html
+++ b/templates/teachers_info_view.html
@@ -10,32 +10,33 @@
 
 {% block content %}
     <table class="table main-table" style="width: calc(100% - 280px); float: left">
-        <colgroup>
-            <col>
-            <col>
-            <col width="80px">
-        </colgroup>
         <thead>
             <tr>
-                <td>Место работы</td>
-                <td>Учитель</td>
-                <td></td>
+                <td>Фамилия</td>
+                <td>Имя</td>
+                <td>Отчество</td>
+                <td style="width: 140px">Дата рождения</td>
+                <td>Логин</td>
+                <td style="width: 80px"></td>
             </tr>
         </thead>
-        {% for student in students_list %}
-            <tr>
-                <td>{{ student.school_name_txt }}</td>
+        {% for teacher in teachers %}
+            <tr id="teacher_row_{{ teacher.person_id }}">
+                {% csrf_token %}
+                <input type="hidden" name="id" value="{{ teacher.person.pk }}">
+                <input type="hidden" name="auth_user_id" value="{{ teacher.auth_user_id }}">
+                <td><input type="text" name="person_surname_txt" value="{{ teacher.person.person_surname_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
+                <td><input type="text" name="person_name_txt" value="{{ teacher.person.person_name_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
+                <td><input type="text" name="person_father_name_txt" value="{{ teacher.person.person_father_name_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
+                <td><input type="text" name="birth_dt_day" value="{{ teacher.person.birth_dt.day }}" style="border-width: 0; width: 18px;" readonly/>-
+                <input type="text" name="birth_dt_month" value="{{ teacher.person.birth_dt.month }}" style="border-width: 0; width: 18px;" readonly/>-
+                <input type="text" name="birth_dt_year" value="{{ teacher.person.birth_dt.year }}" style="border-width: 0; width: 33px;" readonly/>
+                <td>{{ teacher.auth_user.username }}</td>
                 <td>
-                    {{ student.person_surname_txt }} {{ student.person_name_txt }}
-                    {{ student.person_father_name_txt }}
-                </td>
-                <td>
-                    <a href="/student/detail/{{ student.person_id }}/" class="smallsquarebutton" target="_self">
-                        <span class="glyphicon glyphicon-eye-open"></span>
-                    </a>
-                    <a href="{{object.get_update_url}}" class="smallsquarebutton" target="_self">
-                            <span class="glyphicon glyphicon-remove"></span>
-                    </a>
+                    <button id="teacher_data_button_{{ teacher.person.pk }}" onclick="enableEditObjectMode('teacher', {{ teacher.person.pk }})">
+                                                <span class="glyphicon glyphicon-pencil" id="teacher_data_button_span_{{ teacher.person.pk }}"></span>
+                                            </button>
+                                            <button onclick="delete_object('teacher', {{ teacher.person.pk }})"><span class="glyphicon glyphicon-remove"></span></button>
                 </td>
             </tr>
         {% endfor %}
@@ -47,15 +48,33 @@
             <input type="text" name="surname" value="{{ request_get.surname }}" placeholder="Фамилия"/>
             <input type="text" name="name" value="{{ request_get.name }}" placeholder="Имя"/>
             <input type="text" name="father_name" value="{{ request_get.father_name }}" placeholder="Отчество"/>
-            <input type="text" name="school" value="{{ request_get.school }}" placeholder="Школа"/>
-            <p>Паспорт:</p>
-            <input type="text" name="document_series" value="{{ request_get.document_series }}" style="width: 60px; float: left; margin-right: 10px;" placeholder="Серия">
-            <input type="text" name="document_no" value="{{ request_get.document_no }}" style="width: 93px;" placeholder="Номер">
+            <input type="text" name="login" value="{{ request_get.school }}" placeholder="Логин"/>
             <table style="">
                 <tr>
                     <td><button type="submit"><span class="glyphicon glyphicon-search"></span></button></td>
-                    <td><a href="/"><span class="glyphicon glyphicon-remove"></span></a></td>
-                    <td><button><span class="glyphicon glyphicon-plus"></span></button></td>
+                    <td><button type="reset"><span class="glyphicon glyphicon-remove"></span></button></td>
+                </tr>
+            </table>
+        </form>
+
+    </div>
+
+    <div class="search-box" style="margin-top: 280px; ">
+        <form method="GET">
+            <h3>Добавить</h3>
+            <input type="text" name="surname" placeholder="Фамилия"/>
+            <input type="text" name="name" placeholder="Имя"/>
+            <input type="text" name="father_name" placeholder="Отчество"/>
+            День рождения: <input type="text" name="birth_dt_day" placeholder="ДД" style="width: 30px;"/>-
+                <input type="text" name="birth_dt_month" placeholder="ММ" style="width: 32px;"/>-
+                <input type="text" name="birth_dt_year" placeholder="ГГГГ" style="width: 44px;"/>
+            <input type="text" name="login" placeholder="Логин"/>
+            <input type="password" name="password" placeholder="Пароль"/>
+            <input type="password" name="repeat_password" placeholder="Повторите пароль"/>
+            <table style="">
+                <tr>
+                    <td><button type="submit"><span class="glyphicon glyphicon-plus"></span></button></td>
+                    <td><button type="reset"><span class="glyphicon glyphicon-remove"></span></button></td>
                 </tr>
             </table>
         </form>
