added version table + fixed table on the student_detail_view

--- a/cspcapp/static/css/base.css
+++ b/cspcapp/static/css/base.css
@@ -38,6 +38,7 @@ body {
 
 .login-info {
     padding-left: 10px;
+    margin-bottom: 70px;
     text-decoration: none;
     font-size: 30px;
     color: whitesmoke;
