--- a/templates/students_overview.html
+++ b/templates/students_overview.html
@@ -60,7 +60,7 @@
                 <tr>
                     <td><button type="submit"><span class="glyphicon glyphicon-search"></span></button></td>
                     <td><a href="/"><span class="glyphicon glyphicon-remove"></span></a></td>
-                    <td><button><span class="glyphicon glyphicon-plus"></span></button></td>
+                    <td><a href="/student_add/"><span class="glyphicon glyphicon-plus"></span></a></td>
                 </tr>
             </table>
         </form>
