--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
           crossorigin="anonymous">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="{% static 'javascript/commonFiles/jquery.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/constants.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/objectsEditing.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/addObject.js' %}" type="text/javascript"></script>
@@ -32,7 +32,9 @@
 <body>
 <div class="sidebar" id="mySidebar">
     <div class="login-info">
-        <div class="circle" style="padding: 0px 0px 10px 8px; padding-bottom: 45px"><font size="4">AA</font></div>
+{#        <div class="circle" style="padding: 0px 0px 10px 8px; padding-bottom: 45px"><font size="4">AA</font></div>#}
+                <div class="circle" style="font-size: 20px; text-align: center; padding-top: 8px;">{{ user.first_name|first }}{{ user.last_name|first }}</div>
+
     </div>
 
     <div class="exit-button">
@@ -52,10 +54,6 @@
     </div>
     <div class="sidebar-element">
         <a href="/teachers/"><span class="glyphicon glyphicon-briefcase"></span></a>
-    </div>
-
-    <div class="sidebar-element">
-        <a href="/versions/"><span class="glyphicon glyphicon-book"></span></a>
     </div>
 
     <div class="sidebar-element">
