--- a/templates/courses_info_view.html
+++ b/templates/courses_info_view.html
@@ -33,7 +33,7 @@
                 <td><input type="text" name="name_txt" value="{{ course.name_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
                 <td><input type="text" name="short_nm" value="{{ course.short_nm }}" style="border-width: 0; width: 100%;" readonly/></td>
                 <td><input type="text" name="price_per_hour" value="{{ course.price_per_hour }}" style="border-width: 0; width: 100%;" readonly/></td>
-                <td><input type="text" name="payment_dt_day" value="{{ course.number_of_hours }}" style="border-width: 0; width: 100%;" readonly/></td>
+                <td><input type="text" name="number_of_hours" value="{{ course.number_of_hours }}" style="border-width: 0; width: 100%;" readonly/></td>
                 <td>dev</td>
                 </form>
                 <td>
@@ -69,7 +69,7 @@
 
                             <tr id="course_element_row_{{ course_element.pk }}">
                             <form method="post" id="course_element_data_form_{{ course_element.pk }}">
-                                <input type="hidden" name="course_element_id" value="{{ course_element.pk }}">
+                                <input type="hidden" name="id" value="{{ course_element.pk }}">
                             {% csrf_token %}
                                 <td>
                                     <select name="teacher_id" disabled>
@@ -81,15 +81,15 @@
                                 {% for i in classes %}
                                     <td>
                                         {% if i is None %}
-                                            <input type="text" name="course_class_start_hour" value="" style="border-width: 0; width: 18px;" readonly/>:
-                                            <input type="text" name="course_class_start_minute" value="" style="border-width: 0; width: 18px;" readonly/>-
-                                            <input type="text" name="course_class_end_hour" value="" style="border-width: 0; width: 18px;" readonly/>:
-                                            <input type="text" name="course_class_end_minute" value="" style="border-width: 0; width: 18px;" readonly/>
+                                            <input type="text" name="course_class" value="" style="border-width: 0; width: 18px;" readonly/>:
+                                            <input type="text" name="course_class" value="" style="border-width: 0; width: 18px;" readonly/>-
+                                            <input type="text" name="course_class" value="" style="border-width: 0; width: 18px;" readonly/>:
+                                            <input type="text" name="course_class" value="" style="border-width: 0; width: 18px;" readonly/>
                                         {% else %}
-                                            <input type="text" name="course_class_start_hour" value="{{ i.start_tm.hour }}" style="border-width: 0; width: 18px;" readonly/>:
-                                            <input type="text" name="course_class_start_minute" value="{{ i.start_tm.minute }}" style="border-width: 0; width: 18px;" readonly/>-
-                                            <input type="text" name="course_class_end_hour" value="{{ i.end_tm.hour }}" style="border-width: 0; width: 18px;" readonly/>:
-                                            <input type="text" name="course_class_end_minute" value="{{ i.end_tm.minute }}" style="border-width: 0; width: 18px;" readonly/>
+                                            <input type="text" name="course_class" value="{{ i.start_tm.hour }}" style="border-width: 0; width: 18px;" readonly/>:
+                                            <input type="text" name="course_class" value="{{ i.start_tm.minute }}" style="border-width: 0; width: 18px;" readonly/>-
+                                            <input type="text" name="course_class" value="{{ i.end_tm.hour }}" style="border-width: 0; width: 18px;" readonly/>:
+                                            <input type="text" name="course_class" value="{{ i.end_tm.minute }}" style="border-width: 0; width: 18px;" readonly/>
                                         {% endif %}
                                     </td>
                                 {% endfor %}
