--- a/templates/teachers_info_view.html
+++ b/templates/teachers_info_view.html
@@ -2,6 +2,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}
+
     <title>Список Учителей</title>
 {% endblock %}
 
@@ -9,6 +10,7 @@
 
 
 {% block content %}
+
     <table class="table main-table" style="width: calc(100% - 280px); float: left">
         <thead>
             <tr>
@@ -16,61 +18,117 @@
                 <td>Имя</td>
                 <td>Отчество</td>
                 <td style="width: 140px">Дата рождения</td>
+                <td style="width: 10px;">SU</td>
                 <td>Логин</td>
-                <td style="width: 80px"></td>
+                <td style="width: 170px"></td>
             </tr>
         </thead>
-        {% for teacher in teachers %}
+        {% for teacher, course_elements_set in teachers %}
             <tr id="teacher_row_{{ teacher.person_id }}">
                 {% csrf_token %}
                 <input type="hidden" name="id" value="{{ teacher.person.pk }}">
-                <input type="hidden" name="auth_user_id" value="{{ teacher.auth_user_id }}">
-                <td><input type="text" name="person_surname_txt" value="{{ teacher.person.person_surname_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
-                <td><input type="text" name="person_name_txt" value="{{ teacher.person.person_name_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
-                <td><input type="text" name="person_father_name_txt" value="{{ teacher.person.person_father_name_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
-                <td><input type="text" name="birth_dt_day" value="{{ teacher.person.birth_dt.day }}" style="border-width: 0; width: 18px;" readonly/>-
-                <input type="text" name="birth_dt_month" value="{{ teacher.person.birth_dt.month }}" style="border-width: 0; width: 18px;" readonly/>-
-                <input type="text" name="birth_dt_year" value="{{ teacher.person.birth_dt.year }}" style="border-width: 0; width: 33px;" readonly/>
+{#                <input type="hidden" name="auth_user_id" value="{{ teacher.auth_user_id }}">#}
+                <td><input type="text" name="person.person_surname_txt" value="{{ teacher.person.person_surname_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
+                <td><input type="text" name="person.person_name_txt" value="{{ teacher.person.person_name_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
+                <td><input type="text" name="person.person_father_name_txt" value="{{ teacher.person.person_father_name_txt }}" style="border-width: 0; width: 100%;" readonly/></td>
+                <td><input type="text" name="person.birth_dt_day" value="{{ teacher.person.birth_dt.day }}" style="border-width: 0; width: 18px;" readonly/>-
+                <input type="text" name="person.birth_dt_month" value="{{ teacher.person.birth_dt.month }}" style="border-width: 0; width: 18px;" readonly/>-
+                <input type="text" name="person.birth_dt_year" value="{{ teacher.person.birth_dt.year }}" style="border-width: 0; width: 33px;" readonly/>
+                    <td>
+{#                <select name="auth_user.is_superuser">#}
+{#                        <option value="True" {% if teacher.auth_user.is_superuser %} selected {% endif %}>Да</option>#}
+{#                        <option value="False" {% if not teacher.auth_user.is_superuser %} selected {% endif %}>Нет</option>#}
+{#                    </select>#}
+                    <input type="checkbox" name="auth_user.is_superuser" {% if teacher.auth_user.is_superuser %} checked {% endif %} readonly>
+            </td>
                 <td>{{ teacher.auth_user.username }}</td>
                 <td>
+                    <button onclick="toggleInfoTab('teacher', {{ teacher.person_id }})">
+                        <span id="teacher_row_more_info_button_span_{{ teacher.person_id }}" class="glyphicon glyphicon-arrow-down"></span>
+                    </button>
+                    <button type="submit"><span class="glyphicon glyphicon-time"></span></button>
+                    <button id="teacher_data_change_password_{{ teacher.person.pk }}" onclick=" " >
+                                                П
+                                            </button>
                     <button id="teacher_data_button_{{ teacher.person.pk }}" onclick="enableEditObjectMode('teacher', {{ teacher.person.pk }})">
                                                 <span class="glyphicon glyphicon-pencil" id="teacher_data_button_span_{{ teacher.person.pk }}"></span>
                                             </button>
-                                            <button onclick="delete_object('teacher', {{ teacher.person.pk }})"><span class="glyphicon glyphicon-remove"></span></button>
+                                            <button onclick="deleteItem('teacher', {{ teacher.person.pk }})"><span class="glyphicon glyphicon-remove"></span></button>
+
                 </td>
+            </tr>
+            <tr id="teacher_row_more_info_{{ teacher.person_id }}" hidden="true" style="column-count: 2">
+            <td colspan="7">
+            {% for course_element, details_set in course_elements_set %}
+                {{ course_element.course.sphere_txt }} {{ course_element.course.name_txt }} {{ course_element.get_week_days_str }}
+                    <table class="table main-table" style="width: 100%" id="course_element_table_{{ course.pk }}">
+                        <thead>
+                            <tr>
+                                <td>Дата</td>
+                                <td style="width: 120px;">Начало</td>
+                                <td style="width: 120px;">Конец</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for i in details_set %}
+                            <tr>
+                            <td>{{ i.class_dt }}</td>
+                                <td>{{ i.start_tm }}</td>
+                                <td>{{ i.end_tm }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                        <tfoot>
+
+                        </tfoot>
+                    </table>
+                {% endfor %}
+
+                    {{ course_element.course }}
+                    {% for course_element_detail in course_element.courseelementdetailclass_set.all %}
+                        {{ course_element_detail }}
+                        {% endfor %}
+
+
+
+                </td>
+
+{#                {% for teacher.pers %}#}
             </tr>
         {% endfor %}
     </table>
 
+{#    <div class="search-box">#}
+{#        <form method="GET">#}
+{#            <h3>Поиск</h3>#}
+{#            <input type="text" name="surname" value="{{ request_get.surname }}" placeholder="Фамилия"/>#}
+{#            <input type="text" name="name" value="{{ request_get.name }}" placeholder="Имя"/>#}
+{#            <input type="text" name="father_name" value="{{ request_get.father_name }}" placeholder="Отчество"/>#}
+{#            <input type="text" name="login" value="{{ request_get.school }}" placeholder="Логин"/>#}
+{#            <table style="">#}
+{#                <tr>#}
+{#                    <td><button type="submit"><span class="glyphicon glyphicon-search"></span></button></td>#}
+{#                    <td><button type="reset"><span class="glyphicon glyphicon-remove"></span></button></td>#}
+{#                </tr>#}
+{#            </table>#}
+{#        </form>#}
+{##}
+{#    </div>#}
+
     <div class="search-box">
-        <form method="GET">
-            <h3>Поиск</h3>
-            <input type="text" name="surname" value="{{ request_get.surname }}" placeholder="Фамилия"/>
-            <input type="text" name="name" value="{{ request_get.name }}" placeholder="Имя"/>
-            <input type="text" name="father_name" value="{{ request_get.father_name }}" placeholder="Отчество"/>
-            <input type="text" name="login" value="{{ request_get.school }}" placeholder="Логин"/>
-            <table style="">
-                <tr>
-                    <td><button type="submit"><span class="glyphicon glyphicon-search"></span></button></td>
-                    <td><button type="reset"><span class="glyphicon glyphicon-remove"></span></button></td>
-                </tr>
-            </table>
-        </form>
-
-    </div>
-
-    <div class="search-box" style="margin-top: 280px; ">
-        <form method="GET">
+        <form method="POST" action="/api/new_user/">
             <h3>Добавить</h3>
+            {% csrf_token %}
             <input type="text" name="surname" placeholder="Фамилия"/>
             <input type="text" name="name" placeholder="Имя"/>
             <input type="text" name="father_name" placeholder="Отчество"/>
-            День рождения: <input type="text" name="birth_dt_day" placeholder="ДД" style="width: 30px;"/>-
+            День рождения:
+            <input type="text" name="birth_dt_day" placeholder="ДД" style="width: 30px;"/>-
                 <input type="text" name="birth_dt_month" placeholder="ММ" style="width: 32px;"/>-
                 <input type="text" name="birth_dt_year" placeholder="ГГГГ" style="width: 44px;"/>
-            <input type="text" name="login" placeholder="Логин"/>
+            <input type="text" name="username" placeholder="Логин"/>
             <input type="password" name="password" placeholder="Пароль"/>
-            <input type="password" name="repeat_password" placeholder="Повторите пароль"/>
+            <input type="password" name="password_repeat" placeholder="Повторите пароль"/>
             <table style="">
                 <tr>
                     <td><button type="submit"><span class="glyphicon glyphicon-plus"></span></button></td>
@@ -79,5 +137,9 @@
             </table>
         </form>
     </div>
+
+{#    <div id="dialog" title="Basic dialog">#}
+{#    <input type="password" size="25" />#}
+{#</div>#}
 
 {% endblock %}
