--- a/templates/base.html
+++ b/templates/base.html
@@ -60,10 +60,17 @@
     </div>
 
     <div class="sidebar-element">
-        <a href="#"><span class="glyphicon glyphicon-folder-open"></span></a>
-        <span class="hidden_panel">Утилиты</span>
-
+        <div class="dropdown">
+            <a href="#" class="dropbtn"><span class="glyphicon glyphicon-folder-open"></span></a>
+            <span class="hidden_panel">Утилиты</span>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+        </div>
     </div>
+
 
 
 </div>
