--- a/cspcapp/static/css/base.css
+++ b/cspcapp/static/css/base.css
@@ -16,7 +16,7 @@ body {
     height: 100%;
     width: 60px;
     position: fixed;
-    z-index: 5;
+    z-index: 2;
     top: 0;
     left: 0;
     background-color: #3b5998;
@@ -33,7 +33,7 @@ body {
 .window-content {
     margin-left: 60px; /* Same as the width of the sidebar */
     padding: 0px 10px;
-    z-index: 6;
+    z-index: -1;
 }
 
 .login-info {
@@ -93,3 +93,40 @@ input[type="checkbox"][readonly] {
 .for_menu_location {
     float: none;
 }
+
+.dropbtn {
+  padding: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: absolute;
+}
+
+.dropdown-content {
+    display: none;
+    margin-left: 10px;
+    position: fixed;
+    background-color: #9cd7ff;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 3;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    size: 20px;
+    font-size: 20px;
+    z-index: 4;
+}
+
+.dropdown-content a:hover {background-color: #8b9dc3}
+
+.dropdown:hover .dropdown-content {
+  display: inline-block;
+}
+
