--- a/cspcapp/static/css/base.css
+++ b/cspcapp/static/css/base.css
@@ -88,6 +88,7 @@ input[type="checkbox"][readonly] {
 }
 
 .dropbtn {
+
   padding: 16px;
   border: none;
   cursor: pointer;
@@ -99,25 +100,28 @@ input[type="checkbox"][readonly] {
 
 .dropdown-content {
     display: none;
-    margin-left: 10px;
+    margin-left: 50px;
+    margin-top: -100px;
     position: fixed;
-    background-color: #9cd7ff;
+    background-color: #3b5998;
+    color: white;
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 3;
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    padding: 10px;
     text-decoration: none;
     display: block;
     size: 20px;
-    font-size: 20px;
+    font-size: 16px;
     z-index: 4;
+    margin: 0;
 }
 
 .dropdown-content a:hover {background-color: #8b9dc3}
+
 
 .dropdown:hover .dropdown-content {
   display: block;
